# jujijubenshengcheng

./: .env  .gitignore  README.md  main.py  nb_log_config.py  pipeline.yaml  pyproject.toml  requirements.txt  run_0_1_to_0_8.py  run_full_0_to_0_8.py  web_api.py
new_pipeline/core/: __init__.py  client.py  config.py  exceptions.py  report_generator.py  utils.py
new_pipeline/steps/: __init__.py  commont_log.py  step0_1_asr.py  step0_2_clue_extraction.py  step0_3_global_alignment_llm.py  step0_4_speaker_calibration.py  step0_5_integrated_analysis.py  step0_6_plot_extraction.py  step0_7_script_writing.py  step0_8_final_script.py  step0_upload.py
