[project]
name = "jujijubenshengcheng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.23.0",
    "google-cloud-storage>=2.10.0",
    "google-genai>=0.3.0",
    "nb-log>=13.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]
